<resources>
    <string name="app_name">스트레칭 알람</string>
    <string name="select_stretching_option">스트레칭 옵션 선택</string>
    <string name="stretching_option_squat">스쿼트</string>
    <string name="stretching_option_pushup">푸쉬업</string>
    <string name="enter_initial_count">초기 갯수를 입력하세요</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">알람</string>
    <string name="title_dashboard">스탑워치</string>
    <string name="title_notifications">차트</string>
    <string name="title_rank">랭킹</string>
    <string name="title_my_page">내정보</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>