<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_alarm"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_mission"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_graph"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_rank"
        android:title="@string/title_rank" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/ic_mypage"
        android:title="@string/title_my_page" />
</menu>